--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -88,6 +88,7 @@ upstream {{ $host }}_{{ $location }} {
 
 {{ if (and (ne $cert "") (exists (printf "/etc/nginx/certs/%s.crt" $cert)) (exists (printf "/etc/nginx/certs/%s.key" $cert))) }}
 
+
 server {
 	server_name {{ $host }};
 	rewrite ^(.*) https://{{ $host }}$1 permanent;
@@ -96,7 +97,7 @@ server {
 server {
 	server_name {{ $host }};
 	listen 443 ssl;
-	
+
 	client_max_body_size 2048M;
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
@@ -110,12 +111,17 @@ server {
 	ssl_certificate_key /etc/nginx/certs/{{ (printf "%s.key" $cert) }};
 
 	{{ range $location, $containers := groupBy $containers "Env.VIRTUAL_LOCATION" }}
+	{{ $proxyBase := (first (groupByKeys $containers "Env.VIRTUAL_PROXY_BASE")) }}
 	{{ if eq $location "/" }}
 	location / {
 		proxy_pass http://{{ $host }}_/;
 	{{ else }}
 	location /{{ $location }} {
+		{{ if $proxyBase }}
+		proxy_pass http://{{ $host }}_{{ $location }}/;
+		{{ else }}
 		proxy_pass http://{{ $host }}_{{ $location }}/{{ $location }};
+		{{ end }}
 	{{ end }}
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
 		auth_basic	"Restricted {{ $host }}";
@@ -128,16 +134,22 @@ server {
 
 server {
 	server_name {{ $host }};
-	
+
 	client_max_body_size 2048M;
 
 	{{ range $location, $containers := groupBy $containers "Env.VIRTUAL_LOCATION" }}
+	{{ $proxyBase := (first (groupByKeys $containers "Env.VIRTUAL_PROXY_BASE")) }}
+
 	{{ if eq $location "/" }}
 	location / {
 		proxy_pass http://{{ $host }}_/;
 	{{ else }}
 	location /{{ $location }} {
+		{{ if $proxyBase }}
+		proxy_pass http://{{ $host }}_{{ $location }}/;
+		{{ else }}
 		proxy_pass http://{{ $host }}_{{ $location }}/{{ $location }};
+		{{ end }}
 	{{ end }}
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
 		auth_basic	"Restricted {{ $host }}";
@@ -151,7 +163,7 @@ server {
 	server_name {{ $host }};
 	listen 443 ssl;
 	return 503;
-	
+
 	client_max_body_size 2048M;
 
 	{{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
