--- a/virtualhosts.tmpl
+++ b/virtualhosts.tmpl
@@ -38,7 +38,7 @@
     {{ end }}
 
     {{ if (exists (printf "/etc/nginx/vhost.d/%s_location" .Host)) }}
-        include {{ printf "/etc/nginx/vhost.d/%s_location" Host}};
+        include {{ printf "/etc/nginx/vhost.d/%s_location" .Host}};
     {{ else if (exists "/etc/nginx/vhost.d/default_location") }}
         include /etc/nginx/vhost.d/default_location;
     {{ end }}
@@ -123,7 +123,7 @@
                 {{ template "location" (dict "Location" $location "Host" $host "ProxyBase" $proxyBase) }}
             {{ end }}
 
-            {{ template "custom_vhost_config" (dict Host" $host) }}
+            {{ template "custom_vhost_config" (dict "Host" $host) }}
         }
 
     {{ else }}
@@ -137,14 +137,13 @@
                 {{ template "location" (dict "Location" $location "Host" $host "ProxyBase" $proxyBase) }}
             {{ end }}
 
-            {{ template "custom_vhost_config" (dict Host" $host) }}
+            {{ template "custom_vhost_config" (dict "Host" $host) }}
         }
 
         {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
             server {
                 server_name {{ $host }};
-                listen 443 ssl http2 {{ $default_server }};
-                access_log /var/log/nginx/access.log vhost;
+                listen 443 ssl http2;
                 return 503;
 
                 ssl_certificate /etc/nginx/certs/default.crt;
